fix: delete exam dark mode styling

--- a/client/src/assets/styles/_color-themes.scss
+++ b/client/src/assets/styles/_color-themes.scss
@@ -340,6 +340,9 @@ body.dark-mode {
         color: theme_color("error");
       }
     }
+    &__popup--inner {
+      background-color: theme-color("dark-mode");
+    }
   }
   .exam-bar {
     border-color: theme_color("light");
